<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:padding="7dp"
    tools:context=".MainActivity">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_orange_light"
        android:elevation="3dp"
        app:cardCornerRadius="10dp">
        <LinearLayout
            android:id="@+id/mylayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/task_here"
                android:textColor="@color/black"
                android:textSize="48sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/priority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="cursive"
                android:text="@string/priority_medium"
                android:textColor="@color/black"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="cursive"
                android:text="@string/list"
                android:textColor="@color/black"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"
                android:layout_marginTop="5dp"
                android:fontFamily="cursive"
                android:text="@string/time"
                android:textColor="@color/black"
                android:textSize="34sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
