<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/black"
            android:fontFamily="serif"
            android:text="@string/your_list"
            android:textAlignment="center"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="48sp" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclre_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/view" />

        <Button
            android:id="@+id/deleteAll"
            android:layout_width="wrap_content"
            android:layout_height="86dp"
            android:layout_gravity="right|bottom"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/design_default_color_on_primary"
            android:soundEffectsEnabled="false"
            android:text="@string/x"
            android:textAllCaps="false"
            android:textColor="@color/black"
            tools:ignore="VisualLintBounds,TouchTargetSizeCheck" />

        <Button
            android:id="@+id/Add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|top"
            android:layout_marginBottom="30dp"
            android:background="@drawable/ic_launcher_background"
            android:soundEffectsEnabled="true"
            android:text="@string/Add"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="RtlHardcoded" />

    </FrameLayout>
</LinearLayout>
